2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Don't highlight caret
	  line on first open.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui.Content/IEditableTextBuffer.cs: Added
	  caret line highlighting when position is set.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Added DocumentEventArgs.

2009-10-13  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.KeyBindingsPanel.cs:
	  Implement a filter entry for the keybindings panel.

	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectReferenceDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.BuildPanelWidget.cs:
	  Flush.

2009-10-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Commands/ProjectCommands.cs: Implemented Run
	  Entry With command.

	* MonoDevelop.Ide.Execution/CustomExecutionMode.cs:
	* MonoDevelop.Ide.Execution/CommandExecutionContext.cs:
	* MonoDevelop.Ide.Execution/ExecutionModeCommandService.cs:
	  Generalized a bit. Custom modes can now be stored for any
	  SolutionEntityItem.

	* MonoDevelop.Ide.csproj: Fix typo in file name.

2009-10-13  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.FindInFiles/HslColor.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Moved hsl
	  color & brightness into the text edior. (removed brightness
	  * 1e-3, it correctly ranges now 0.0-1.0);

2009-10-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs: Escape
	  markup to fix GTK errors and list misrendering.

2009-10-12  Mike Krüger  <mkrueger@novell.com>
