@@ -1,3 +1,8 @@
+2009-10-14  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs: Fix
+	  changing keybindings with the filtered model.
+
 2009-10-14  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Ide.Gui/Workbench.cs:
